chore(search): refactor code
Refactor code for better readability.

Signed-off-by: Gaurav Mishra <mishra.gaurav@siemens.com>